--- a/contact.html
+++ b/contact.html
@@ -32,19 +32,20 @@
       </ul>
     </nav>
   </header>
-  <main>
-  <h1 class="headings__font-family">Contact Hyun</h1>
-  <div>
-    1 Any Street<br>
-    Little Town<br>
-    The North<br>
-    AB12 C34<br>
-    UK<br>
-    <br>
-    Skype <a href="skype:hello.hyun">hello.hyun</a><br>
-    <a href="mailto:hyun@email.com">hyun@email.com</a><br>
-    <a href="mailto:hyun@email.com">Contact me</a>
-  </div>
+  <main class="contact">
+    <h1 class="headings__font-family contact__item">Contact Hyun</h1>
+    <div class="contact__item" id="contact-address">
+        1 Any Street<br>
+        Little Town<br>
+        The North<br>
+        AB12 C34<br>
+        UK<br>
+    </div>
+    <div class="contact__item" id="contact-direct-links">
+        Skype <a href="skype:hello.hyun">hello.hyun</a><br>
+        <a href="mailto:hyun@email.com">hyun@email.com</a><br>
+        <a href="mailto:hyun@email.com">Contact me</a>
+    </div>
   </main>
   <form action="#" method="post" id="contact-form">
     <label class="standard-label" for="contact-email">Email:</label>
