--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,10 @@
     <input type="tel" maxlength="11" id="contact-tel">
     <label class="standard-label" for="contact-message">Message:</label>
     <textarea maxlength="240" id="contact-message" required></textarea>
-    <input type="submit" value="Send message">
+    <p class="contact__item" id="contact-message__detail">max. 240 characters<p>
+    <div class="button-wrapper">
+      <input type="submit" value="Send message" id="contact-form__submit">
+    </div>
   </form>
   <footer class="page-footer">
     <h3 class="headings__font-family">Find me on</h3>
