Moved social-media icon img sizes from html to css
-height/width added in html in Ex.1.2
-moved to working css file after running w3c validation

--- a/work.html
+++ b/work.html
@@ -66,13 +66,13 @@
     <h3 class="headings__font-family">Find me on</h3>
     <div class="social-media">
       <a href="#" class="social-media__item">
-        <img src="img/github_icon.svg" width="30px" height="30px" alt="Github logo">
+        <img src="img/github_icon.svg" alt="Github logo" class="social-media__item-image">
       </a>
       <a href="#" class="social-media__item">
-        <img src="img/twitter_icon.svg" width="30px" height="30px" alt="Twitter logo">
+        <img src="img/twitter_icon.svg" alt="Twitter logo" class="social-media__item-image">
       </a>
       <a href="#" class="social-media__item">
-        <img src="img/linkedin_icon.svg" width="30px" height="30px" alt="LinkedIn logo">
+        <img src="img/linkedin_icon.svg" alt="LinkedIn logo" class="social-media__item-image">
       </a>
     </div>
   </footer>
