--- a/work.html
+++ b/work.html
@@ -38,27 +38,27 @@
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 1</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 2</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 3</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 4</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 5</h2>
         <p class="projects__item-summary">I made this big thing.</p>
-        <a href="#">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
       </div>
     </div>
   </main>
