Updated link to my code examples
-changed link text wording
-changed href to GitHub from work.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>
         My name is Hyun Young Lee. I am a <span>web</span> developer living near Manchester.
       </p>
-      <a href="work.html">Check out some of my code</a>
+      <a href="https://github.com/hylee-vx/portfolio-website">Check out my code</a>
     </div>
   </main>
   <footer class="page-footer">
