Updated link to 'View my CV'
-href to LinkedIn

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <br>
     In my free time, I like to read, walk in the hills near my home and hide from my children. I have promised them a dog sometime in the next decade.
   </p>
-  <a href="#" class="button bio__item" target="_blank">View my CV</a>
+  <a href="https://www.linkedin.com/in/hyun-young-lee-15a5a813a/" class="button bio__item" target="_blank">View my CV</a>
   </main>
   <div class="countryside-wrapper">
   <svg
