Added missing / to <p> closing tag

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
     <input type="tel" id="contact-tel">
     <label class="standard-label required-input" for="contact-message">Message:</label>
     <textarea maxlength="240" id="contact-message" required></textarea>
-    <p class="contact__item" id="contact-message__detail">max. 240 characters<p>
+    <p class="contact__item" id="contact-message__detail">max. 240 characters</p>
     <div class="button-wrapper">
       <input type="submit" value="Send" id="contact-form__submit">
     </div>
