--- a/contact.html
+++ b/contact.html
@@ -65,13 +65,13 @@
   <footer class="page-footer">
     <h3 class="headings__font-family">Find me on</h3>
     <div class="social-media">
-      <a href="https://github.com/hylee-vx/portfolio-website" class="social-media__item">
+      <a href="https://github.com/hylee-vx/portfolio-website" class="social-media__item" target="_blank">
         <img src="img/github_icon.svg" alt="Github logo" class="social-media__item-image">
       </a>
-      <a href="https://twitter.com/hyunnyhyunhyun" class="social-media__item">
+      <a href="https://twitter.com/hyunnyhyunhyun" class="social-media__item" target="_blank">
         <img src="img/twitter_icon.svg" alt="Twitter logo" class="social-media__item-image">
       </a>
-      <a href="https://www.linkedin.com/in/hyun-young-lee-15a5a813a/" class="social-media__item">
+      <a href="https://www.linkedin.com/in/hyun-young-lee-15a5a813a/" class="social-media__item" target="_blank">
         <img src="img/linkedin_icon.svg" alt="LinkedIn logo" class="social-media__item-image">
       </a>
     </div>
