--- a/work.html
+++ b/work.html
@@ -38,40 +38,40 @@
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 1</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 2</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 3</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 4</h2>
         <p class="projects__item-summary">I made this.</p>
-        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">See project on GitHub</a>
       </div>
       <div class="projects__item">
         <h2 class="headings__font-family projects__item-heading">Example project 5</h2>
         <p class="projects__item-summary">I made this big thing.</p>
-        <a href="https://github.com/hylee-vx/portfolio-website">See project on GitHub</a>
+        <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">See project on GitHub</a>
       </div>
     </div>
   </main>
   <footer class="page-footer">
     <h3 class="headings__font-family">Find me on</h3>
     <div class="social-media">
-      <a href="https://github.com/hylee-vx/portfolio-website" class="social-media__item">
+      <a href="https://github.com/hylee-vx/portfolio-website" class="social-media__item" target="_blank">
         <img src="img/github_icon.svg" alt="Github logo" class="social-media__item-image">
       </a>
-      <a href="https://twitter.com/hyunnyhyunhyun" class="social-media__item">
+      <a href="https://twitter.com/hyunnyhyunhyun" class="social-media__item" target="_blank">
         <img src="img/twitter_icon.svg" alt="Twitter logo" class="social-media__item-image">
       </a>
-      <a href="https://www.linkedin.com/in/hyun-young-lee-15a5a813a/" class="social-media__item">
+      <a href="https://www.linkedin.com/in/hyun-young-lee-15a5a813a/" class="social-media__item" target="_blank">
         <img src="img/linkedin_icon.svg" alt="LinkedIn logo" class="social-media__item-image">
       </a>
     </div>
