Removed <span> from .profile__item <p>
-added for early exercise, no longer required

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="profile__item">
       <h1 id="hello-world" class="headings__font-family">Hello World!</h1>
       <p>
-        My name is Hyun Young Lee. I am a <span>web</span> developer living near Manchester.
+        My name is Hyun Young Lee. I am a web developer living near Manchester.
       </p>
       <a href="https://github.com/hylee-vx/portfolio-website" target="_blank">Check out my code</a>
     </div>
