Changed punctuation in <h1>

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="profile">
     <img src="img/hylee_photo.png" class="profile__item" alt="Hyun Young Lee portrait">
     <div class="profile__item">
-      <h1 id="hello-world" class="headings__font-family">Hello World!</h1>
+      <h1 id="hello-world" class="headings__font-family">Hello World.</h1>
       <p>
         My name is Hyun Young Lee. I am a web developer living near Manchester.
       </p>
