Changed grid layout for .contact and #contact-form
-allow contact address and direct email/skype/tel links to display side by side
-display form input field beneath form label

--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
   </header>
   <main class="contact">
     <h1 class="headings__font-family contact__item">Contact Hyun</h1>
-    <div class="contact__item" id="contact-address">
+    <div class="contact__item">
         1 Any Street<br>
         Little Town<br>
         The North<br>
         AB12 C34<br>
         UK<br>
     </div>
-    <div class="contact__item" id="contact-direct-links">
+    <div class="contact__item">
         Skype <a href="skype:hello.hyun">hello.hyun</a><br>
         <a href="mailto:hyun@email.com">hyun@email.com</a><br>
         <a href="mailto:hyun@email.com">Contact me</a>
